fix: alignment of pill

--- a/packages/core/src/components/chip/chip-mixin.scss
+++ b/packages/core/src/components/chip/chip-mixin.scss
@@ -10,138 +10,6 @@
 $predefined-chips: alarm, critical, warning, info, neutral, success;
 $border-radius: 100px;
 
-@mixin chip-variant($interaction) {
-  @each $color in $predefined-chips {
-    &[variant='#{$color}'] {
-      color: var(--theme-color-#{$color}--contrast);
-
-      @if $interaction {
-        &:hover::after {
-          content: '';
-          display: block;
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0, 0, 0, 0.05);
-          left: 0;
-          border-radius: $border-radius;
-          pointer-events: none;
-        }
-
-        &.active::after,
-        &:active::after {
-          content: '';
-          display: block;
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0, 0, 0, 0.1);
-          left: 0;
-          border-radius: $border-radius;
-          pointer-events: none;
-        }
-      }
-
-      &:not(.outline) {
-        background-color: var(--theme-color-#{$color});
-
-        .close-button {
-          color: var(--theme-color-#{$color}--contrast);
-        }
-
-        &:hover::after {
-          content: '';
-          background-color: rgba(0, 0, 0, 0.05);
-        }
-
-        &.active::after,
-        &:active::after {
-          background-color: rgba(0, 0, 0, 0.1);
-        }
-      }
-
-      &.outline {
-        color: var(--theme-chip-outline--color);
-        border: solid 1px var(--theme-color-#{$color});
-
-        &:hover::after {
-          display: none;
-        }
-
-        &:hover {
-          background-color: var(--theme-chip-outline--background--hover);
-        }
-
-        &.active::after,
-        &:active::after {
-          display: none;
-        }
-
-        &.active,
-        &:active {
-          background-color: var(--theme-chip-outline--background--active);
-        }
-      }
-
-      @if $interaction {
-        &:focus-visible {
-          outline: 1px solid #199fff;
-          outline-offset: var(--theme-btn--focus--outline-offset);
-        }
-      }
-    }
-  }
-}
-
-@mixin chip($interaction: true) {
-  &[variant='primary'] {
-    background-color: var(--theme-color-primary);
-    color: var(--theme-chip-primary--color);
-
-    .close-button {
-      color: var(--theme-chip-primary--color);
-      pointer-events: auto;
-    }
-
-    @if $interaction {
-      &:hover {
-        background-color: var(--theme-chip-primary--background--hover);
-      }
-
-      &:active {
-        background-color: var(--theme-chip-primary--background--active);
-      }
-
-      &:focus-visible {
-        outline: 1px solid #199fff;
-        outline-offset: var(--theme-btn--focus--outline-offset);
-      }
-    }
-  }
-
-  &[variant='primary'].outline {
-    color: var(--theme-chip-primary-outline--color);
-    background-color: transparent;
-    border: solid 1px var(--theme-chip-primary-outline--border-color);
-
-    .close-button {
-      color: var(--theme-chip-primary-outline--color);
-    }
-
-    @if $interaction {
-      &:hover {
-        background-color: var(--theme-chip-primary-outline--background--hover);
-      }
-
-      &:active {
-        background-color: var(--theme-chip-primary-outline--background--active);
-      }
-    }
-  }
-
-  @include chip-variant($interaction: $interaction);
-}
-
 @mixin chip-container($interaction: true) {
   .container {
     display: inline-flex;
@@ -172,12 +40,11 @@ $border-radius: 100px;
 
     .close-button-container {
       display: inline-flex;
-      margin-left: $medium-space;
+      margin-left: auto;
+      padding-left: 0.5rem;
     }
 
     .slot-container {
-      flex-grow: 1;
-
       @include ellipsis;
     }
   }
