--- a/packages/core/src/components/pill/pill.scss
+++ b/packages/core/src/components/pill/pill.scss
@@ -23,9 +23,12 @@
 
 @include chip-container(false);
 
-.container {
-  height: 100%;
-  justify-content: center;
+:host {
+  .container {
+    height: 100%;
+    justify-content: center;
+    padding-right: 0.5rem;
+  }
 }
 
 :host(.align-left) {
